Implement new ConVar features
Slight cleanup with new ConVar features to be used throughout the SDK

--- a/r5dev/dedicated.vcxproj.filters
+++ b/r5dev/dedicated.vcxproj.filters
@@ -657,6 +657,9 @@
     <ClInclude Include="thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.h">
       <Filter>thirdparty\lzham\lzhamdecomp\include</Filter>
     </ClInclude>
+    <ClInclude Include="mathlib\bits.h">
+      <Filter>sdk\mathlib</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="client\IVEngineClient.cpp">
@@ -856,6 +859,9 @@
     </ClCompile>
     <ClCompile Include="thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.cpp">
       <Filter>thirdparty\lzham\lzhamdecomp</Filter>
+    </ClCompile>
+    <ClCompile Include="mathlib\bits.c">
+      <Filter>sdk\mathlib</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
