Fix compiler error + rename debug dll's
Rename for easier debugging and config separation

--- a/r5dev/dedicated.vcxproj.filters
+++ b/r5dev/dedicated.vcxproj.filters
@@ -860,7 +860,7 @@
     <ClCompile Include="thirdparty\lzham\lzhamdecomp\lzham_lzdecompbase.cpp">
       <Filter>thirdparty\lzham\lzhamdecomp</Filter>
     </ClCompile>
-    <ClCompile Include="mathlib\bits.c">
+    <ClCompile Include="mathlib\bits.cpp">
       <Filter>sdk\mathlib</Filter>
     </ClCompile>
   </ItemGroup>
