--- a/r5dev/r5dev.vcxproj.filters
+++ b/r5dev/r5dev.vcxproj.filters
@@ -399,6 +399,9 @@
     <ClCompile Include="mathlib\bits.cpp">
       <Filter>sdk\mathlib</Filter>
     </ClCompile>
+    <ClCompile Include="tier0\commandline.cpp">
+      <Filter>sdk\tier0</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\cdll_engine_int.h">
@@ -1033,6 +1036,9 @@
     </ClInclude>
     <ClInclude Include="mathlib\bits.h">
       <Filter>sdk\mathlib</Filter>
+    </ClInclude>
+    <ClInclude Include="tier0\commandline.h">
+      <Filter>sdk\tier0</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
