--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -191,6 +191,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="tier0\commandline.cpp" />
     <ClCompile Include="tier0\ConCommand.cpp" />
     <ClCompile Include="tier0\completion.cpp" />
     <ClCompile Include="tier0\cvar.cpp" />
@@ -401,6 +402,7 @@
     <ClInclude Include="thirdparty\spdlog\include\tweakme.h" />
     <ClInclude Include="thirdparty\spdlog\include\version.h" />
     <ClInclude Include="tier0\basetypes.h" />
+    <ClInclude Include="tier0\commandline.h" />
     <ClInclude Include="tier0\ConCommand.h" />
     <ClInclude Include="tier0\completion.h" />
     <ClInclude Include="tier0\cvar.h" />
