--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -362,6 +362,7 @@
     <ClCompile Include="common\opcodes.cpp" />
     <ClCompile Include="core\dllmain.cpp" />
     <ClCompile Include="core\init.cpp" />
+    <ClCompile Include="core\logdef.cpp" />
     <ClCompile Include="core\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
