Implement terminal utilities for Windows console + add new colors for various output variations
* Add new SDK launch logo.
* Remove ansi-color coding from in-game console and file loggers.
* Improve console colors for Windows.
* Implement various string utilities.
* Implement various terminal utilities.

--- a/r5dev/dedicated.vcxproj.filters
+++ b/r5dev/dedicated.vcxproj.filters
@@ -666,6 +666,12 @@
     <ClInclude Include="core\assert.h">
       <Filter>core</Filter>
     </ClInclude>
+    <ClInclude Include="mathlib\color.h">
+      <Filter>sdk\mathlib</Filter>
+    </ClInclude>
+    <ClInclude Include="core\termutil.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="client\IVEngineClient.cpp">
@@ -873,6 +879,9 @@
       <Filter>sdk\tier0</Filter>
     </ClCompile>
     <ClCompile Include="core\logdef.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
+    <ClCompile Include="core\termutil.cpp">
       <Filter>core</Filter>
     </ClCompile>
   </ItemGroup>
