--- a/r5dev/r5dev.vcxproj.filters
+++ b/r5dev/r5dev.vcxproj.filters
@@ -405,6 +405,9 @@
     <ClCompile Include="core\logdef.cpp">
       <Filter>core</Filter>
     </ClCompile>
+    <ClCompile Include="core\termutil.cpp">
+      <Filter>core</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client\cdll_engine_int.h">
@@ -1044,6 +1047,9 @@
       <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="core\assert.h">
+      <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="core\termutil.h">
       <Filter>core</Filter>
     </ClInclude>
   </ItemGroup>
