--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -180,6 +180,7 @@
     <ClInclude Include="core\logdef.h" />
     <ClInclude Include="core\r5dev.h" />
     <ClInclude Include="core\stdafx.h" />
+    <ClInclude Include="core\termutil.h" />
     <ClInclude Include="ebisusdk\EbisuSDK.h" />
     <ClInclude Include="engine\baseclient.h" />
     <ClInclude Include="engine\host_cmd.h" />
@@ -191,6 +192,7 @@
     <ClInclude Include="launcher\IApplication.h" />
     <ClInclude Include="mathlib\adler32.h" />
     <ClInclude Include="mathlib\bits.h" />
+    <ClInclude Include="mathlib\color.h" />
     <ClInclude Include="mathlib\crc32.h" />
     <ClInclude Include="mathlib\IceKey.H" />
     <ClInclude Include="mathlib\parallel_for.h" />
@@ -367,6 +369,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="core\termutil.cpp" />
     <ClCompile Include="ebisusdk\EbisuSDK.cpp" />
     <ClCompile Include="engine\baseclient.cpp" />
     <ClCompile Include="engine\host_cmd.cpp" />
