--- a/r5dev/dedicated.vcxproj
+++ b/r5dev/dedicated.vcxproj
@@ -498,6 +498,7 @@
     <ClCompile Include="tier0\IConVar.cpp" />
     <ClCompile Include="vpc\basefilesystem.cpp" />
     <ClCompile Include="vpc\IAppSystem.cpp" />
+    <ClCompile Include="vpc\interfaces.cpp" />
     <ClCompile Include="vpc\keyvalues.cpp" />
     <ClCompile Include="vphysics\QHull.cpp" />
     <ClCompile Include="vpklib\packedstore.cpp" />
