Initial pylon integration

--- a/r5dev/r5dev.vcxproj
+++ b/r5dev/r5dev.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="engine\sys_dll.cpp" />
     <ClCompile Include="engine\sys_dll2.cpp" />
     <ClCompile Include="engine\sys_utils.cpp" />
+    <ClCompile Include="gameui\IBrowser.cpp" />
     <ClCompile Include="gameui\IConsole.cpp" />
     <ClCompile Include="IDevPallete.cpp" />
     <ClCompile Include="inputsystem\inputsystem.cpp" />
@@ -234,6 +235,7 @@
     <ClInclude Include="engine\sys_dll.h" />
     <ClInclude Include="engine\sys_dll2.h" />
     <ClInclude Include="engine\sys_utils.h" />
+    <ClInclude Include="gameui\IBrowser.h" />
     <ClInclude Include="gameui\IConsole.h" />
     <ClInclude Include="IDevPalette.h" />
     <ClInclude Include="inputsystem\ButtonCode.h" />
@@ -248,6 +250,7 @@
     <ClInclude Include="mathlib\parallel_for.h" />
     <ClInclude Include="mathlib\vector.h" />
     <ClInclude Include="milessdk\win64_rrthreads.h" />
+    <ClInclude Include="networksystem\net_structs.h" />
     <ClInclude Include="networksystem\r5net.h" />
     <ClInclude Include="networksystem\sm_protocol.h" />
     <ClInclude Include="public\include\memaddr.h" />
